@@ -1,3 +1,8 @@
+2005-09-08  Dmitriy Anisimkov <anisimkov@ada-ru.org>
+
+	* smem.out smem.adb smem_proc.adb smem_sec.adb smem_sec.out:
+	New regtest for copy and reuse socket.
+
 2005-09-06  Dmitriy Anisimkov <anisimkov@ada-ru.org>
 
 	* spair.adb, spair_sec.adb, spair.out, spair_sec.out, spair_proc.adb:
